# automated-data-pipeline-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
pipeline/collectors/: api_clients.py  nft.py
pipeline/load/: store.py
pipeline/transform/: normalize.py
pipeline/utils/: api.py  cache.py  logs.py  status.py
